Finish second section. Try to fix padding

--- a/style.css
+++ b/style.css
@@ -1,36 +1,88 @@
-body{
+html, body{
     margin: 0;
-    font-family: 'Roboto', sans-serif;    
+    height: 100%;
 }
-h1{
+body{
+    font-family: 'Roboto', sans-serif;
+}
+h1, h2, ul{
     margin: 0;
     padding: 0;
+}
+h1{
     color: #f9faf8;
     font-size: 48px;
     font-weight: 800;   
 }
+h2{
+    font-size: 36px;
+    font-weight: 800;
+    color: #1f2937;
+}
 ul{
-    margin: 0px;
-    padding: 0px;
     color: #e5e7eb;
     font-size: 18px;
     list-style: none;
     display: flex;
     gap: 16px
 }
-#header, #first-section{
+button{
+    background-color: #3882f6;
+    border-color: #3882f6;
+    border-radius: 8px;
+    padding: 4px 20px;
+}
+header, #first{
     background-color: #1f2937;
     display: flex;
-}
-#header{
     justify-content: space-between;
     align-items: center;
 }
-#header > #logo{
+header{
+    padding: 10px 75px 0px
+}
+header > #logo{
     color: #f9faf8;
     font-size: 24px;
 }
-#first-section p{
+#first{
+    padding: 46px 75px;
+    gap: 24px;
+}
+#first p, button{
     font-size: 18px;
     color: #e5e7eb;
+}
+#text{
+    flex: 1 1 0;
+}
+#text > p{
+ margin: 4px 0 8px 0;
+}
+#img-placeholder{
+    flex: 1 1 0;
+    width: 100px;
+    height: 200px;
+    background-color: gray;
+}
+#second{
+    padding: 21px 115px 46px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 32px;
+}
+#content{
+    display: flex;
+    gap: 32px;
+    justify-content: center;
+}
+.images{
+    flex: 0 1 200px;
+}
+.img{
+    width: 200px;
+    height: 200px;
+    border: 3px solid #3882f6;
+    border-radius: 15%;
 }
